Fixed extra padding on input element in safari.

--- a/css/style.scss
+++ b/css/style.scss
@@ -231,6 +231,7 @@ hr + h3 {
     padding: 20px;
     display: block;
     width: 100%;
+    margin: 0;
     border: none;
     font-size: 1rem;
     font-family: "Roboto Mono", monospace;
